Bump dependencies versions.
Bump SpringBoot plugin to 3.5.4
Bump Lombok plugin to 8.14
Bump gradle-git-properties plugin to 2.5.2
Bump picocli-spring-boot-starter to 4.7.7
Bump JAnsi to 2.4.2
Bump commons-io to 2.20.0
Bump Mockito to 5.18.0
Explicitly attach Mockito agent during tests execution